Moved printing to View object

--- a/stories/machine_plot.yaml
+++ b/stories/machine_plot.yaml
@@ -1,5 +1,5 @@
 ---
-vars:
+_vars:
   - logger: 0
   - machines:
       - - "."
@@ -15,38 +15,41 @@ vars:
     _type: bag
   - time: 0
   - wood: 0
-story:
+_content:
+  - choice: craft
+  - choice: gather
+  - print_table: machines
+  - print: Hi
+    style: bold
+  - set: logger = 1
+    show:
+  - insert: test_item
+    into: inventory
+  - if:
+      - has: test_item
+        in: inventory
+        amount: 3
+    then:
+      - print: Condition true
+logic:
+  time_passed:
+    _content:
+      - set: time += 1
+      - print: It worked!
+craft:
   _content:
-    - choice: craft
-    - choice: gather
-    - print_table: machines
-    - insert: test_item
-      into: inventory
-    - if:
-        - has: test_item
-          in: inventory
-          amount: 3
-      then:
-        - print: Condition true
-  logic:
-    time_passed:
-      _content:
-        - set: time += 1
-        - print: It worked!
-  craft:
-    _content:
-      - choice: back
-        effects: /
-      - choice: logger
-        text: Automatically gathers wood as time passes.
-        cost: 2 wood
-        shown: 1 logger
-    logger:
-      - choice: back
-        effects: /
-  gather:
-    _content:
-      - gosub: /logic/time_passed
-      - You get some wood.
-      - set: wood += 1
-        show:
+    - choice: back
+      effects: /
+    - choice: logger
+      text: Automatically gathers wood as time passes.
+      cost: 2 wood
+      shown: 1 logger
+  logger:
+    - choice: back
+      effects: /
+gather:
+  _content:
+    - gosub: /logic/time_passed
+    - You get some wood.
+    - set: wood += 1
+      show:
