--- a/src/grammar.yaml
+++ b/src/grammar.yaml
@@ -4,8 +4,12 @@ START:
   mandatory:
     _content: CONTENT
   optional:
+    _include: INCLUDE_DICT
     _vars: VARS
   other: BLOCK
+INCLUDE_DICT:
+  type: dict
+  other: _text # Actually is a filename, but we don't have to pay attention to that for now
 VARS:
   type: list
   elements: VAR
@@ -23,6 +27,7 @@ DICT_BLOCK: # Has special built-in checking
   type: dict
   optional:
     _content: CONTENT
+    _include: INCLUDE_DICT
     _vars: VARS
   other: BLOCK
 LIST_BLOCK:
@@ -124,6 +129,7 @@ INSERT:
   mandatory:
     insert: _id
     into: _var_id
+    amount: _expr
 LOSE:
   type: dict
   mandatory:
